--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="es-cl">
+<html class="no-js" lang="en-us">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,6 +33,8 @@
 <div class="container">
     <nav class="navbar navbar-fixed-top  navigation " id="top-nav">
         <a class="navbar-brand" href="#">
+            
+            <img src="images/logo.png" alt="logo">
             
         </a>
         <button class="navbar-toggler hidden-lg-up float-lg-right" type="button" data-toggle="collapse" data-target="#navbarResponsive">
