--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                 
                     <li class="nav-item">
                         <a class="nav-link" href="/#service">
-                             Doc en Chile 
+                             Doc visita Chile 
                         </a>
                     </li>
                 
