linked doc visita chile directly

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                         
                         
                         <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
-                            <a class="btn btn-home" href="#about" role="button">
+                            <a class="btn btn-home" href="#service" role="button">
                                 Más información
                             </a>
                         </div>
