--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 
 
     <!-- Hero Area Section -->
-    <section class="hero-area" style='background-image: url(" images/doc-shaperoom-color.jpg");'>
+    <section class="hero-area" style='background-image: url(" images/doc-color-sm.png");'>
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
