--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 
                     <li class="nav-item">
                         <a class="nav-link" href="http://www.surfprescriptions.com/boards.html">
-                             Catálogo 
+                             Catálogo tablas 
                            
                     </a>
                 </li>
