added google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,14 @@
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133751579-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133751579-1');
+</script>
+
+
 <!DOCTYPE html>
 <html class="no-js" lang="es-cl">
 <head>
@@ -48,7 +59,7 @@
                 
                     <li class="nav-item">
                         <a class="nav-link" href="/#about">
-                             Quiénes somos 
+                             Nosotros 
                         </a>
                     </li>
                 
