shifted background picture right

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
 
     <!-- Hero Area Section -->
-    <section class="hero-area" style='background-image: url(" images/doc-color-sm.png");'>
+    <section class="hero-area" style='background-image: url(" images/doc-shaperoom-shifted-right.png");'>
              <div class="col-md-4 wow zoomIn">
                     <div class="block">
                         <div class="counter text-center">
