doc logo surfboard

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
 
     <!-- Hero Area Section -->
-    <section class="hero-area" style='background-image: url(" images/doc-shaperoom-shifted-right.png");'>
+    <section class="hero-area" style='background-image: url(" images/doc_logo_website.jpg");'>
              <div class="col-md-4 wow zoomIn">
                     <div class="block">
                         <div class="counter text-center">
@@ -98,13 +98,6 @@
                                         <div class="digit">0</div>
                                         <div class="digit">0</div>
                                         <span class="dash_title">Días</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="dash hours_dash">
-                                        <div class="digit">0</div>
-                                        <div class="digit">0</div>
-                                        <span class="dash_title">Horas</span>
                                     </div>
                                 </li>
                             </ul>
